z-index fix and selected content colored

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -54,9 +54,12 @@ priceLabel {
 	position: absolute;
 }
 .navbarZ-index {
-	z-index: 100000 !important;
+	z-index: 2 !important;
 	position: sticky !important;
 	top: 0;
+}
+.drawerZ-index > div > div {
+	z-index: 1;
 }
 
 /* Scrollbar*/
